[package]
name = "rote"
version = "0.2.0"
authors = ["coderstephen <me@stephencoakley.com>"]
license = "Apache-2.0"
repository = "http://github.com/coderstephen/rote"
readme = "README.md"

[dependencies]
filetime = "0.1"
flate2 = "0.2"
getopts = "0.2"
glob = "0.2"
log = "0.3"
lua = { git = "https://github.com/jcmoyer/rust-lua53" }
num_cpus = "0.2"
regex = "0.1"
solicit = "0.4.4"
tar = "0.3.2"
term = "0.4"
time = "0.1"

[[bin]]
name = "rote"
path = "src/main.rs"
