[package]
name = "rote"
version = "0.2.0"
authors = ["coderstephen <me@stephencoakley.com>"]
license = "Apache-2.0"
repository = "http://github.com/coderstephen/rote"
readme = "README.md"

[dependencies]
getopts = "0.2"
glob = "0.2"
hyper = "0.9"
json = "0.10"
log = "0.3"
lua = { git = "https://github.com/jcmoyer/rust-lua53" }
num_cpus = "0.2"
regex = "0.1"
term = "0.4"

[[bin]]
name = "rote"
path = "src/main.rs"
