[package]
name = "rote"
version = "0.2.0"
authors = ["Stephen Coakley <me@stephencoakley.com>"]
license = "Apache-2.0"
repository = "http://github.com/sagebind/rote"
readme = "README.md"

[dependencies]
getopts = "0.2"
glob = "0.2"
json = "0.10"
log = "0.4"
num_cpus = "0.2"
regex = "0.1"
term = "0.4"

[dependencies.hyper]
version = "0.9"
default-features = false

[dependencies.lua]
git = "https://github.com/jcmoyer/rust-lua53"

[[bin]]
name = "rote"
path = "src/main.rs"
