[package]
name = "rote"
version = "0.1.0"
authors = ["coderstephen <me@stephencoakley.com>"]
license = "Apache-2.0"
repository = "http://github.com/coderstephen/rote"
readme = "README.md"

[dependencies]
filetime = "0.1"
getopts = "0.2"
glob = "0.2"
lazysort = "0.1"
log = "0.3"
regex = "0.1"
runtime = { path = "../runtime" }
term = "0.4"

[[bin]]
name = "rote"
path = "main.rs"
