[package]
name = "rote"
version = "0.1.0"
authors = ["coderstephen <me@stephencoakley.com>"]
license = "Apache-2.0"
repository = "http://github.com/coderstephen/rote"
readme = "README.md"

[dependencies]
getopts = "0.2"
glob = "0.2"
log = "0.3"
num_cpus = "0.2"
regex = "0.1"
script = { path = "../script" }
term = "0.4"

[[bin]]
name = "rote"
path = "main.rs"
